# restaraunt-petproject

./: .black  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pre-commit  pre-commit-config.yaml  pyproject.toml  setup.py
backend/: database.py  db_cleaner.py  models.py  securiy.py  server.py  services.py  tgbot.py
backend/global-server/: config.py  database.py  pyproject.toml  services.py  webscraper.py
backend/global-server/project_types/: __init__.py  schemas.py
backend/local-server/: pyproject.toml
backend/project_types/: exceptions.py  literals.py  schemas.py
docs/: links.txt  restaraunt-petproject OnlineOrder flow.drawio
docs/drawio/: inheritance.drawio
frontend/public/: index.html
global-server/: .nvimrc  alembic.ini  config.py  database.py  models.py  pyproject.toml  pytest.ini  securiy.py  server.py  services.py  setup.py  tgbot.py
global-server/database/: database.py  endpoints.py  models.py
global-server/database/generation/: __init__.py  general.py  reset.py
global-server/database/types_/: __init__.py  abstracts.py  enums.py  exceptions.py  schemas.py
global-server/generation/: __init__.py  general.py  project.py
global-server/migrations/: env.py
global-server/migrations/versions/: 5bcfd08e3a6e_initial_migration.py  68dd24a48bb9_task_distribution.py  ae5e0b09370f_bugfix.py  d1ad78fb1101_re_init_after_error.py  d95d8ac27ee9_restored_after_enums_error.py
global-server/project_types/: __init__.py  enums.py  exceptions.py  literals.py  schemas.py
global-server/src/: __init__.py  config.py
global-server/src/database/: __init__.py  database.py  endpoints.py  models.py
global-server/src/database/types_/: __init__.py  enums.py  exceptions.py  schemas.py  structs.py
global-server/tests/: conftest.py
global-server/tests/database/: conftest.py  test_models.py
local-server/: pyproject.toml
test-data/: dodo.html
