[tool.poetry]
name = "restaraunt-petproject"
version = "0.1.0"
description = ""
authors = ["Vchslv-Zkhrv <vchslv.zkrhv@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
fastapi = "^0.103.2"
loguru = "^0.7.2"
passlib = "^1.7.4"
colorama = "^0.4.6"
sqlalchemy = "^2.0.22"
uvicorn = "^0.24.0.post1"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
aiofiles = "^23.2.1"
jwt = "^1.3.1"
pillow = "^10.1.0"

[tool.pyright]
 include = [
  "backend"
]
 exclude = [
  "**/__init__.py"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
