[tool.poetry]
name = "restaraunt-petproject"
version = "0.1.0"
description = ""
authors = ["Vchslv-Zkhrv <vchslv.zkrhv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
fastapi = "0.101.1"
sqlalchemy = "^2.0.23"
jwt = "^1.3.1"
passlib = "^1.7.4"
pillow = "^10.1.0"
loguru = "^0.7.2"
psycopg2-binary = "^2.9.9"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
